# nltosparql

./: .env.example  .gitignore  README.md  architecture.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: default.yaml
ontologies/: example_ontology.ttl  sample_ontology.ttl  trains_onto.ttl  uni_onto.ttl  wine_ontology.ttl
src/agent/: __init__.py  orchestrator.py
src/cli/: main.py
src/functions/: __init__.py  answer.py  base.py  discovery.py  examples.py  exploration.py  factory.py  registry.py  search.py
src/llm/: base.py  ollama_client.py  openai_client.py
src/sparql/: qlever_client.py  validator.py  wikidata_search_client.py
src/utils/: __init__.py  system_init.py
src/web/: __init__.py  app.py
src/web/static/: app.js  index.html  styles.css
